--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <br>
         <input type="text" name="image" value="" placeholder="Enter a toy's image URL..." class="input-text">
         <br>
-        <input type="submit" name="submit" value="Create New Toy" class="submit">
+        <input type="submit" name="submit" value="Create New Toy" class="submit" id="submit-btn">
       </form>
     </div>
     <p style='text-align:center' >Andy needs your help! <button id='new-toy-btn'>Add a new toy!</button></p>
